リストの作成

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Player]
-Pos=60,60
-Size=138,77
-Collapsed=1
+Pos=183,39
+Size=298,301
+Collapsed=0
 
 [Window][RailCamera]
 Pos=273,56
 Size=249,205
+Collapsed=0
+
+[Window][EnemyDebug1]
+Pos=54,92
+Size=272,299
 Collapsed=0
 
