レールルカメラ

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Player]
-Pos=60,60
-Size=138,77
+Pos=71,94
+Size=189,108
+Collapsed=0
+
+[Window][RailCamera]
+Pos=318,83
+Size=297,116
 Collapsed=0
 
